@@ -175,7 +175,7 @@ int libvshadow_store_descriptor_initialize(
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_initialize(
 	     &( ( *store_descriptor )->read_write_lock ),
 	     error ) != 1 )
@@ -254,7 +254,7 @@ int libvshadow_store_descriptor_free(
 	}
 	if( *store_descriptor != NULL )
 	{
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 		if( libcthreads_read_write_lock_free(
 		     &( ( *store_descriptor )->read_write_lock ),
 		     error ) != 1 )
@@ -526,7 +526,7 @@ int libvshadow_store_descriptor_read_catalog_entry(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -955,7 +955,7 @@ int libvshadow_store_descriptor_read_catalog_entry(
 		}
 #endif
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -987,7 +987,7 @@ on_error:
 		 NULL );
 	}
 #endif
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_write(
 	 store_descriptor->read_write_lock,
 	 NULL );
@@ -1029,7 +1029,7 @@ int libvshadow_store_descriptor_read_store_header(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -1635,7 +1635,7 @@ int libvshadow_store_descriptor_read_store_header(
 		 "\n" );
 	}
 #endif
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -1659,7 +1659,7 @@ on_error:
 		 &store_block,
 		 NULL );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_write(
 	 store_descriptor->read_write_lock,
 	 NULL );
@@ -2316,7 +2316,7 @@ int libvshadow_store_descriptor_read_block_descriptors(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -2425,7 +2425,7 @@ int libvshadow_store_descriptor_read_block_descriptors(
 		}
 		store_descriptor->block_descriptors_read = 1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -2443,7 +2443,7 @@ int libvshadow_store_descriptor_read_block_descriptors(
 	return( 1 );
 
 on_error:
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_write(
 	 store_descriptor->read_write_lock,
 	 NULL );
@@ -2527,7 +2527,7 @@ ssize_t libvshadow_store_descriptor_read_buffer(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3095,7 +3095,7 @@ ssize_t libvshadow_store_descriptor_read_buffer(
 		}
 #endif
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3113,7 +3113,7 @@ ssize_t libvshadow_store_descriptor_read_buffer(
 	return( (ssize_t) buffer_offset );
 
 on_error:
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_read(
 	 store_descriptor->read_write_lock,
 	 NULL );
@@ -3153,7 +3153,7 @@ int libvshadow_store_descriptor_get_volume_size(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3170,7 +3170,7 @@ int libvshadow_store_descriptor_get_volume_size(
 #endif
 	*volume_size = store_descriptor->volume_size;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3233,7 +3233,7 @@ int libvshadow_store_descriptor_get_identifier(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3262,7 +3262,7 @@ int libvshadow_store_descriptor_get_identifier(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3312,7 +3312,7 @@ int libvshadow_store_descriptor_get_creation_time(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3329,7 +3329,7 @@ int libvshadow_store_descriptor_get_creation_time(
 #endif
 	*filetime = store_descriptor->creation_time;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3392,7 +3392,7 @@ int libvshadow_store_descriptor_get_copy_identifier(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3421,7 +3421,7 @@ int libvshadow_store_descriptor_get_copy_identifier(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3484,7 +3484,7 @@ int libvshadow_store_descriptor_get_copy_set_identifier(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3513,7 +3513,7 @@ int libvshadow_store_descriptor_get_copy_set_identifier(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3563,7 +3563,7 @@ int libvshadow_store_descriptor_get_attribute_flags(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3580,7 +3580,7 @@ int libvshadow_store_descriptor_get_attribute_flags(
 #endif
 	*attribute_flags = store_descriptor->attribute_flags;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3637,7 +3637,7 @@ int libvshadow_store_descriptor_get_number_of_blocks(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3666,7 +3666,7 @@ int libvshadow_store_descriptor_get_number_of_blocks(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3724,7 +3724,7 @@ int libvshadow_store_descriptor_get_block_descriptor_by_index(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
@@ -3755,7 +3755,7 @@ int libvshadow_store_descriptor_get_block_descriptor_by_index(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     store_descriptor->read_write_lock,
 	     error ) != 1 )
