@@ -45,7 +45,7 @@ typedef intptr_t libvshadow_volume_t;
 
 #endif
 
-#endif
+#endif /* defined( HAVE_LOCAL_LIBVSHADOW ) */
 
 #endif
 
