@@ -127,7 +127,7 @@ int libvshadow_volume_initialize(
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_initialize(
 	     &( internal_volume->read_write_lock ),
 	     error ) != 1 )
@@ -206,7 +206,7 @@ int libvshadow_volume_free(
 		}
 		*volume = NULL;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 		if( libcthreads_read_write_lock_free(
 		     &( internal_volume->read_write_lock ),
 		     error ) != 1 )
@@ -415,7 +415,7 @@ int libvshadow_volume_open(
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -432,7 +432,7 @@ int libvshadow_volume_open(
 #endif
 	internal_volume->file_io_handle_created_in_library = 1;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -582,7 +582,7 @@ int libvshadow_volume_open_wide(
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -599,7 +599,7 @@ int libvshadow_volume_open_wide(
 #endif
 	internal_volume->file_io_handle_created_in_library = 1;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -736,12 +736,12 @@ int libvshadow_volume_open_file_io_handle(
 		 error,
 		 LIBCERROR_ERROR_DOMAIN_IO,
 		 LIBCERROR_IO_ERROR_READ_FAILED,
-		 "%s: unable to read from volume handle.",
+		 "%s: unable to read from file IO handle.",
 		 function );
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -759,7 +759,7 @@ int libvshadow_volume_open_file_io_handle(
 	internal_volume->file_io_handle                   = file_io_handle;
 	internal_volume->file_io_handle_opened_in_library = file_io_handle_opened_in_library;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -821,7 +821,7 @@ int libvshadow_volume_close(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -919,7 +919,7 @@ int libvshadow_volume_close(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -974,7 +974,7 @@ int libvshadow_volume_open_read(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1130,7 +1130,7 @@ int libvshadow_volume_open_read(
 			store_descriptor = NULL;
 		}
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_write(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1155,7 +1155,7 @@ on_error:
 	 (int (*)(intptr_t **, libcerror_error_t **)) &libvshadow_store_descriptor_free,
 	 NULL );
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_write(
 	 internal_volume->read_write_lock,
 	 NULL );
@@ -1198,7 +1198,7 @@ int libvshadow_volume_get_size(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1215,7 +1215,7 @@ int libvshadow_volume_get_size(
 #endif
 	*size = internal_volume->size;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1258,7 +1258,7 @@ int libvshadow_volume_get_number_of_stores(
 	}
 	internal_volume = (libvshadow_internal_volume_t *) volume;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1287,7 +1287,7 @@ int libvshadow_volume_get_number_of_stores(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1353,7 +1353,7 @@ int libvshadow_volume_get_store(
 
 		return( -1 );
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1386,7 +1386,7 @@ int libvshadow_volume_get_store(
 
 		result = -1;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1431,7 +1431,7 @@ int libvshadow_volume_get_store_identifier(
 	}
 	internal_volume = (libvshadow_internal_volume_t *) volume;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_grab_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1478,7 +1478,7 @@ int libvshadow_volume_get_store_identifier(
 
 		goto on_error;
 	}
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	if( libcthreads_read_write_lock_release_for_read(
 	     internal_volume->read_write_lock,
 	     error ) != 1 )
@@ -1496,7 +1496,7 @@ int libvshadow_volume_get_store_identifier(
 	return( 1 );
 
 on_error:
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBVSHADOW_MULTI_THREAD_SUPPORT )
 	libcthreads_read_write_lock_release_for_read(
 	 internal_volume->read_write_lock,
 	 NULL );
