@@ -1,4 +1,4 @@
-.Dd March 30, 2014
+.Dd November 30, 2014
 .Dt libvshadow 3
 .Os libvshadow
 .Sh NAME
@@ -12,6 +12,12 @@
 Support functions
 .Ft const char *
 .Fn libvshadow_get_version "void"
+.Ft int
+.Fn libvshadow_get_access_flags_read
+.Ft int
+.Fn libvshadow_get_codepage "int *codepage, libvshadow_error_t **error"
+.Ft int
+.Fn libvshadow_set_codepage "int codepage, libvshadow_error_t **error"
 .Ft int
 .Fn libvshadow_check_file_signature "const char *filename, libvshadow_error_t **error"
 .Pp
